spectec/test/elab/neg/parse-struct-no-fields.t
  $ ./main.exe parse-struct-no-fields.spectec 2>&1
  error[parse/struct-no-fields]: empty struct type
    --> parse-struct-no-fields.spectec:3:14
    |
  3 | syntax foo = {}
    |              ^^
    = source: parse
  [1]
